fix: highlighted heading color and collapsed block bullet border
fixes #11

fixes #10

--- a/scss/_ctp-vars.scss
+++ b/scss/_ctp-vars.scss
@@ -40,7 +40,7 @@
 
   --ctp-slide-background-color: var(--ctp-primary-background-color);
 
-  --ctp-block-bullet-border-color: rgb(var(--ctp-accent, var(--ctp-sky)));
+  --ctp-block-bullet-border-color: rgba(var(--ctp-accent, var(--ctp-sky)), 0.4);
   --ctp-block-bullet-color: rgb(var(--ctp-accent, var(--ctp-sky)));
   --ctp-block-highlight-color: var(--color-base-30);
 
